# docs/swagger.yaml
@@ -582,14 +582,14 @@ paths:
     get:
       description: get list of completed orders by courier service id
       parameters:
-      - description: page
-        in: query
-        name: page
-        required: true
-        type: integer
       - description: limit
         in: query
         name: limit
+        required: true
+        type: integer
+      - description: page
+        in: query
+        name: page
         required: true
         type: integer
       - description: iddeliveryservice
@@ -613,6 +613,43 @@ paths:
           schema:
             type: string
       summary: GetAllCompletedOrdersOfCourierService
+      tags:
+      - order
+  /orders/service/completed/bydate:
+    get:
+      description: get list of completed orders by courier service id sorted bu date
+      parameters:
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: iddeliveryservice
+        in: query
+        name: iddeliveryservice
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.listShortOrders'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: GetAllCompletedOrdersOfCourierServiceByDate
       tags:
       - order
 swagger: "2.0"
